[package]
name = "installer"
version = "0.1.0"
authors = ["Yanzhen Yu <yanzhen@smartx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.11.2"
prettytable-rs = "0.8.0"
byte-unit = "3.0.3"
clap = "2.33.0"